[package]
name = "simple-mip-optimizer"
version = "0.1.0"
authors = ["Jens Nilsson <jens.erik.nilsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.6.0", features = ["json"]}
ndarray = "0.14.0"